修改首页、侧滑

--- a/HomeSchoolInteraction/manifest.json
+++ b/HomeSchoolInteraction/manifest.json
@@ -125,5 +125,335 @@
 				}
 			}
 		}
+	},
+	"dependencies": {
+		"pages": {
+			"index.html": {
+				"resources": [
+					"html/homeSchool/homeSchoolIndex.html"
+				],
+				"refer": [
+					"html/Course/courseIndex.html"
+				],
+				"priority": 0
+			},
+			"html/login/loginIndex.html": {
+				"resources": [],
+				"refer": [
+					"index.html"
+				],
+				"priority": 0
+			},
+			"html/homeSchool/homeSchoolIndex.html": {
+				"resources": [],
+				"refer": [
+					"html/homeSchool/noticeList.html"
+				],
+				"priority": 0
+			},
+			"html/homeSchool/noticeList.html": {
+				"resources": [],
+				"refer": [
+					"html/homeSchool/noticeDetail.html",
+					"html/homeSchool/notice_add.html"
+				],
+				"priority": 0
+			},
+			"html/homeSchool/notice_add.html": {
+				"resources": [],
+				"refer": [
+					"html/homeSchool/gradeList.html"
+				],
+				"priority": 0
+			}
+		},
+		"idle": {
+			"resources": [
+				"js/libs/RSA/jQuery.md5.js",
+				"img/homeSchool/schoolPage6.png",
+				"html/utils/refreshTest.html",
+				"js/utils/cryption.js",
+				"js/utils/events.js",
+				"js/libs/RSA/Barrett.js",
+				"js/libs/CryptoJS/rollups/rabbit.js",
+				"js/libs/CryptoJS/rollups/pbkdf2.js",
+				"img/homeSchool/schoolPage5.png",
+				"js/libs/CryptoJS/components/md5.js",
+				"js/libs/myStorage/myStorage.js",
+				"js/libs/CryptoJS/components/mode-cfb.js",
+				"js/utils/ASFiles.js",
+				"js/libs/crypto-js/sha3.js",
+				"js/libs/CryptoJS/components/pbkdf2-min.js",
+				"js/mui.previewimage.js",
+				"js/libs/crypto-js/hmac-sha3.js",
+				"js/libs/CryptoJS/components/pad-iso10126-min.js",
+				"js/libs/CryptoJS/rollups/hmac-sha1.js",
+				"js/utils/jquery.qrcode.min.js",
+				"js/libs/CryptoJS/rollups/hmac-sha512.js",
+				"js/sciedu/sciedu-list.js",
+				"js/utils/webviewGroup.js",
+				"js/utils/constantScreen.js",
+				"js/libs/crypto-js/rabbit-legacy.js",
+				"fonts/mui.ttf",
+				"js/libs/CryptoJS/components/hmac-min.js",
+				"js/utils/showvideoutil.js",
+				"css/utils/MultiMedia.css",
+				"js/mui.lazyload.js",
+				"js/libs/crypto-js/bower.json",
+				"img/homeSchool/u296.png",
+				"js/utils/vue.min.js",
+				"js/libs/CryptoJS/components/sha1-min.js",
+				"css/utils/custom-textarea.css",
+				"img/homeSchool/schoolPage2.png",
+				"js/libs/crypto-js/package.json",
+				"js/libs/CryptoJS/components/md5-min.js",
+				"js/libs/CryptoJS/components/rc4.js",
+				"js/libs/CryptoJS/rollups/aes.js",
+				"js/utils/load.js",
+				"js/libs/crypto-js/rabbit.js",
+				"js/libs/CryptoJS/components/mode-ecb-min.js",
+				"js/libs/crypto-js/hmac.js",
+				"js/qiniu/plupload.min.js",
+				"js/libs/CryptoJS/components/pad-zeropadding.js",
+				"js/libs/crypto-js/pad-iso10126.js",
+				"js/libs/RSA/jsencrypt.js",
+				"js/utils/playutil.js",
+				"js/utils/qiniuUpload.js",
+				"js/libs/CryptoJS/components/sha3-min.js",
+				"js/libs/CryptoJS/components/x64-core-min.js",
+				"js/libs/CryptoJS/rollups/hmac-sha224.js",
+				"js/qiniu/moxie.js",
+				"js/libs/crypto-js/pad-ansix923.js",
+				"js/libs/CryptoJS/components/aes.js",
+				"js/libs/CryptoJS/components/enc-utf16-min.js",
+				"css/utils/preview.css",
+				"js/libs/crypto-js/crypto-js.js",
+				"js/utils/urlBrief.js",
+				"js/utils/vue-router.min.js",
+				"js/cloud/mui.previewimage.js",
+				"img/utils/videothumb.png",
+				"img/utils/img-loading.gif",
+				"js/libs/CryptoJS/components/rc4-min.js",
+				"js/libs/RSA/BigInt.js",
+				"js/libs/CryptoJS/components/mode-cfb-min.js",
+				"js/libs/CryptoJS/components/pad-iso10126.js",
+				"js/libs/RSA/RSA.js",
+				"js/libs/CryptoJS/rollups/rc4.js",
+				"js/libs/CryptoJS/components/sha384.js",
+				"img/homeSchool/redColor.png",
+				"js/libs/CryptoJS/components/sha1.js",
+				"js/utils/vue.js",
+				"css/utils/audiopopover.css",
+				"js/libs/RSA/MD5.js",
+				"js/utils/TouchMove.js",
+				"js/utils/MultiMedia.js",
+				"js/libs/crypto-js/enc-latin1.js",
+				"js/qiniu/plupload.full.min.js",
+				"js/libs/crypto-js/pad-zeropadding.js",
+				"js/mui.zoom.js",
+				"img/homeSchool/schoolPage7.png",
+				"js/libs/CryptoJS/components/cipher-core.js",
+				"js/libs/CryptoJS/components/sha256.js",
+				"js/libs/CryptoJS/components/format-hex.js",
+				"js/utils/recordaudioutil.js",
+				"js/libs/CryptoJS/rollups/hmac-sha3.js",
+				"js/utils/vconsole.min.js",
+				"js/mui.pullToRefresh.material.js",
+				"img/utils/default_personalimage.png",
+				"js/libs/crypto-js/tripledes.js",
+				"js/utils/app-update.js",
+				"img/login/username.png",
+				"css/utils/common.css",
+				"js/libs/CryptoJS/components/sha3.js",
+				"js/libs/RSA/RSAEncrypt.js",
+				"js/qiniu/qiniu.js",
+				"js/utils/sortSign.js",
+				"html/homeSchool/addNotice1.html",
+				"js/libs/crypto-js/hmac-sha512.js",
+				"js/libs/CryptoJS/components/pad-iso97971.js",
+				"img/utils/video-loading.gif",
+				"js/libs/CryptoJS/components/pad-ansix923.js",
+				"js/libs/crypto-js/hmac-md5.js",
+				"js/libs/CryptoJS/rollups/hmac-sha384.js",
+				"js/libs/CryptoJS/components/cipher-core-min.js",
+				"js/utils/jquery-1.8.3.min.js",
+				"js/libs/CryptoJS/rollups/sha1.js",
+				"js/libs/crypto-js/lib-typedarrays.js",
+				"js/libs/crypto-js/evpkdf.js",
+				"js/utils/audio.js",
+				"js/libs/crypto-js/x64-core.js",
+				"js/libs/CryptoJS/components/ripemd160.js",
+				"js/libs/crypto-js/sha1.js",
+				"img/homeSchool/schoolPage1.png",
+				"js/libs/CryptoJS/rollups/sha384.js",
+				"js/libs/CryptoJS/rollups/sha256.js",
+				"js/libs/CryptoJS/components/format-hex-min.js",
+				"js/libs/CryptoJS/components/mode-ofb-min.js",
+				"js/libs/CryptoJS/rollups/hmac-sha256.js",
+				"img/homeSchool/schoolPage3.png",
+				"js/libs/CryptoJS/components/aes-min.js",
+				"js/libs/jquery.js",
+				"js/qiniu/Moxie.xap",
+				"js/utils/video.js",
+				"js/libs/CryptoJS/rollups/tripledes.js",
+				"img/login/headImg.png",
+				"js/utils/vue-router.js",
+				"js/libs/crypto-js/aes.js",
+				"css/utils/pullToRefresh.css",
+				"js/libs/CryptoJS/components/sha224-min.js",
+				"fonts/iconfont1.ttf",
+				"html/ScienceEducation/sciedu-list.html",
+				"js/libs/CryptoJS/components/hmac.js",
+				"js/libs/CryptoJS/rollups/sha512.js",
+				"js/libs/crypto-js/sha224.js",
+				"js/libs/CryptoJS/components/lib-typedarrays.js",
+				"fonts/iconfont.ttf",
+				"js/libs/crypto-js/format-hex.js",
+				"js/mui.js",
+				"js/utils/postData.js",
+				"js/libs/CryptoJS/components/rabbit-min.js",
+				"js/utils/h5fresh.js",
+				"js/libs/CryptoJS/components/rabbit.js",
+				"js/utils/all-preview.js",
+				"js/publicProtocolNew.js",
+				"js/libs/CryptoJS/components/sha224.js",
+				"js/cloud/file-list.js",
+				"js/libs/CryptoJS/components/enc-base64-min.js",
+				"js/libs/crypto-js/require.js",
+				"js/libs/crypto-js/hmac-sha1.js",
+				"js/libs/crypto-js/enc-hex.js",
+				"js/libs/crypto-js/sha256.js",
+				"js/libs/crypto-js/enc-base64.js",
+				"js/libs/CryptoJS/components/enc-base64.js",
+				"js/utils/CloudFileUtil.js",
+				"js/libs/crypto-js/LICENSE",
+				"js/libs/crypto-js/hmac-sha256.js",
+				"js/libs/crypto-js/sha512.js",
+				"img/utils/loading.gif",
+				"js/libs/crypto-js/pad-nopadding.js",
+				"img/utils/load-img-error.png",
+				"js/utils/showaudio.js",
+				"js/libs/crypto-js/mode-ofb.js",
+				"js/utils/image-preview.js",
+				"js/utils/slide-selector.js",
+				"js/cloud/upload-filter.js",
+				"js/libs/CryptoJS/components/mode-ctr-gladman-min.js",
+				"js/libs/crypto-js/mode-ctr.js",
+				"js/cloud/AndroidFileSystem.js",
+				"js/utils/UploadHeadImage.js",
+				"js/libs/CryptoJS/components/sha512-min.js",
+				"fonts/mui1.ttf",
+				"js/libs/CryptoJS/components/sha384-min.js",
+				"js/libs/crypto-js/hmac-ripemd160.js",
+				"js/mui.min.js",
+				"img/utils/delete.png",
+				"js/utils/camera.js",
+				"js/utils/signHmacSHA1.js",
+				"js/libs/CryptoJS/components/enc-utf16.js",
+				"js/utils/grideControl.js",
+				"js/mui.pullToRefresh.js",
+				"html/utils/record_audio.html",
+				"js/libs/CryptoJS/rollups/sha3.js",
+				"js/libs/CryptoJS/components/pad-nopadding.js",
+				"js/storageKeyName.js",
+				"js/libs/jquery.lazyload.min.js",
+				"js/libs/CryptoJS/components/pad-iso97971-min.js",
+				"js/libs/CryptoJS/components/pad-ansix923-min.js",
+				"img/utils/default_load_2_1.gif",
+				"js/libs/require/require.js",
+				"img/utils/playvideo.png",
+				"js/libs/crypto-js/hmac-sha224.js",
+				"js/libs/CryptoJS/components/pad-zeropadding-min.js",
+				"fonts/iconfont.css",
+				"js/libs/CryptoJS/components/ripemd160-min.js",
+				"js/libs/crypto-js/mode-ecb.js",
+				"js/libs/crypto-js/pbkdf2.js",
+				"html/ScienceEducation/sciedu_show_main.html",
+				"css/mui.min.css",
+				"js/libs/crypto-js/CONTRIBUTING.md",
+				"js/libs/CryptoJS/components/mode-ctr-min.js",
+				"js/libs/crypto-js/hmac-sha384.js",
+				"js/libs/CryptoJS/rollups/hmac-md5.js",
+				"img/utils/default_load.png",
+				"js/utils/textarea.js",
+				"js/sciedu/SciEduHomeItem.js",
+				"js/libs/CryptoJS/components/evpkdf-min.js",
+				"css/utils/sciedu/sciedu.css",
+				"js/libs/CryptoJS/components/mode-ctr-gladman.js",
+				"js/utils/recordvideoutil.js",
+				"js/utils/storageutil.js",
+				"js/libs/crypto-js/core.js",
+				"js/utils/switch-mine.js",
+				"js/libs/CryptoJS/components/lib-typedarrays-min.js",
+				"js/libs/CryptoJS/components/core-min.js",
+				"html/homeSchool/notice_parentsList.html",
+				"img/homeSchool/schoolPage4.png",
+				"js/libs/CryptoJS/rollups/hmac-ripemd160.js",
+				"img/homeSchool/u292.png",
+				"html/homeSchool/addNotice.html",
+				"css/mui.css",
+				"js/libs/crypto-js/enc-utf16.js",
+				"js/cloud/cloud.js",
+				"fonts/iconfont1.css",
+				"js/libs/CryptoJS/components/tripledes.js",
+				"js/utils/native.js",
+				"css/utils/publish-answer.css",
+				"js/libs/crypto-js/sha384.js",
+				"js/utils/RSAEncrypt.js",
+				"js/libs/CryptoJS/components/evpkdf.js",
+				"html/utils/customizeCity.html",
+				"js/libs/CryptoJS/components/mode-ctr.js",
+				"js/libs/crypto-js/README.md",
+				"js/qiniu/plupload.dev.js",
+				"js/libs/crypto-js/md5.js",
+				"img/homeSchool/u298.png",
+				"js/libs/crypto-js/mode-cfb.js",
+				"js/libs/crypto-js/mode-ctr-gladman.js",
+				"img/utils/default_load_2.gif",
+				"js/libs/crypto-js/pad-iso97971.js",
+				"js/libs/crypto-js/docs/QuickStartGuide.wiki",
+				"js/libs/CryptoJS/components/sha256-min.js",
+				"js/utils/Statusbar.js",
+				"js/libs/crypto-js/pad-pkcs7.js",
+				"js/utils/store.js",
+				"js/libs/CryptoJS/components/pbkdf2.js",
+				"js/mui.lazyload.img.js",
+				"js/utils/self-adaptive-input.js",
+				"js/libs/CryptoJS/components/sha512.js",
+				"fonts/mui-icons-extra1.ttf",
+				"js/utils/compress.js",
+				"js/libs/CryptoJS/components/x64-core.js",
+				"js/libs/CryptoJS/rollups/md5.js",
+				"js/libs/crypto-js/rc4.js",
+				"js/libs/CryptoJS/components/rabbit-legacy-min.js",
+				"img/homeSchool/schoolPage0.png",
+				"js/cloud/order-member.js",
+				"js/libs/crypto-js/cipher-core.js",
+				"js/utils/utils.js",
+				"js/libs/CryptoJS/rollups/ripemd160.js",
+				"js/utils/files.js",
+				"js/libs/CryptoJS/components/tripledes-min.js",
+				"js/libs/CryptoJS/rollups/sha224.js",
+				"fonts/fangzheng1.ttf",
+				"js/utils/carouselControl.js",
+				"js/utils/sub.js",
+				"js/libs/CryptoJS/components/mode-ecb.js",
+				"js/utils/gallerypick.js",
+				"js/libs/CryptoJS/components/core.js",
+				"img/login/password.png",
+				"js/publicProtocol.js",
+				"js/libs/CryptoJS/rollups/rabbit-legacy.js",
+				"js/libs/crypto-js/index.js",
+				"js/utils/QiNiuUtil.js",
+				"js/libs/CryptoJS/components/rabbit-legacy.js",
+				"js/libs/CryptoJS/components/pad-nopadding-min.js",
+				"js/libs/CryptoJS/components/mode-ofb.js",
+				"html/ScienceEducation/sciedu_home.html",
+				"js/qiniu/Moxie.swf",
+				"js/libs/crypto-js/enc-utf8.js",
+				"js/libs/crypto-js/format-openssl.js",
+				"js/libs/crypto-js/ripemd160.js"
+			]
+		}
 	}
 }
