添加推送、科教

--- a/HomeSchoolInteraction/manifest.json
+++ b/HomeSchoolInteraction/manifest.json
@@ -124,7 +124,7 @@
 					"xxhdpi": ""
 				}
 			}
-		},"ads":{"rp":false,"splash":false,"push":false},"adid":""
+		},"ads":{"rp":false,"splash":false,"push":false},"adid":"127020240505"
 	},
 	"dependencies": {
 		"pages": {
