--- a/HomeSchoolInteraction/manifest.json
+++ b/HomeSchoolInteraction/manifest.json
@@ -124,7 +124,7 @@
 					"xxhdpi": "/Users/a111/Downloads/启动/10801882.png"
 				}
 			}
-		},"ads":{"rp":false,"splash":false,"push":false},"adid":"127020240505"
+		},"ads":{"rp":false,"splash":false,"push":false}
 	},
 	"dependencies": {
 		"pages": {
