--- a/HomeSchoolInteraction/manifest.json
+++ b/HomeSchoolInteraction/manifest.json
@@ -155,7 +155,8 @@
 				"resources": [],
 				"refer": [
 					"html/homeSchool/noticeList.html",
-					"html/homeSchool/mine.html"
+					"html/homeSchool/mine.html",
+					"html/mine/mine.html"
 				],
 				"priority": 0
 			},
@@ -201,7 +202,8 @@
 					"html/login/firstPage1.html",
 					"html/mine/headImg.html",
 					"html/mine/modifyPassword.html",
-					"html/mine/myorder.html"
+					"html/mine/myorder.html",
+					"html/order/myorder.html"
 				],
 				"priority": 0
 			},
@@ -239,6 +241,38 @@
 				"resources": [],
 				"refer": [
 					"index2.html"
+				],
+				"priority": 0
+			},
+			"html/mine/myorder.html": {
+				"resources": [],
+				"refer": [
+					"html/mine/mealDetails.html",
+					"html/mine/mealDetails_order.html"
+				],
+				"priority": 0
+			},
+			"html/order/myorder.html": {
+				"resources": [],
+				"refer": [
+					"html/order/mealDetails_order.html",
+					"html/order/mealDetails_renew.html"
+				],
+				"priority": 0
+			},
+			"html/mine/mine.html": {
+				"resources": [],
+				"refer": [
+					"html/order/myorder.html",
+					"html/order/myOrderList.html"
+				],
+				"priority": 0
+			},
+			"html/order/myOrderList.html": {
+				"resources": [],
+				"refer": [
+					"html/order/mealDetails_order.html",
+					"html/order/mealDetails_renew.html"
 				],
 				"priority": 0
 			}
