--- a/HomeSchoolInteraction/manifest.json
+++ b/HomeSchoolInteraction/manifest.json
@@ -118,10 +118,7 @@
 				},
 				"android": {
 					"mdpi": "", /*普通屏启动图片，分辨率：240x282*/
-					"ldpi": "", /*大屏启动图片，分辨率：320x442*/
-					"hdpi": "/Users/a111/Downloads/启动/480762.png", /*高分屏启动图片，分辨率：480x762*/
-					"xhdpi": "/Users/a111/Downloads/启动/7201242.png", /*720P高分屏启动图片，分辨率：720x1242*/
-					"xxhdpi": "/Users/a111/Downloads/启动/10801882.png"
+					"ldpi": ""
 				}
 			}
 		},"ads":{"rp":false,"splash":false,"push":false}
@@ -152,7 +149,9 @@
 				"priority": 0
 			},
 			"html/homeSchool/homeSchoolIndex.html": {
-				"resources": [],
+				"resources": [
+					"js/libs/crypto-js/crypto-js.js"
+				],
 				"refer": [
 					"html/homeSchool/noticeList.html",
 					"html/homeSchool/mine.html",
@@ -176,7 +175,9 @@
 				"priority": 0
 			},
 			"html/sciedu/sciedu_home.html": {
-				"resources": [],
+				"resources": [
+					"js/utils/postData.js"
+				],
 				"refer": [
 					"html/sciedu/sciedu_show_main.html",
 					"html/utils/customizeCity.html"
@@ -184,7 +185,24 @@
 				"priority": 0
 			},
 			"html/login/firstPage.html": {
-				"resources": [],
+				"resources": [
+					"js/publicProtocolNew.js",
+					"js/utils/vconsole.min.js",
+					"js/utils/utils.js",
+					"js/storageKeyName.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/utils/store.js",
+					"js/utils/storageutil.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"js/utils/sortSign.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/signHmacSHA1.js",
+					"js/utils/RSAEncrypt.js"
+				],
 				"refer": [
 					"index.html",
 					"html/login/noPermissions.html",
@@ -264,7 +282,10 @@
 				"resources": [],
 				"refer": [
 					"html/order/myorder.html",
-					"html/order/myOrderList.html"
+					"html/order/myOrderList.html",
+					"html/order/orderList.html",
+					"html/mine/modifyPassword.html",
+					"html/login/firstPage1.html"
 				],
 				"priority": 0
 			},
@@ -283,8 +304,6 @@
 				"img/homeSchool/schoolPage6.png",
 				"html/utils/refreshTest.html",
 				"js/utils/cryption.js",
-				"js/utils/events.js",
-				"js/libs/RSA/Barrett.js",
 				"js/libs/CryptoJS/rollups/rabbit.js",
 				"js/libs/CryptoJS/rollups/pbkdf2.js",
 				"img/homeSchool/schoolPage5.png",
@@ -337,17 +356,14 @@
 				"js/libs/CryptoJS/components/aes.js",
 				"js/libs/CryptoJS/components/enc-utf16-min.js",
 				"css/utils/preview.css",
-				"js/libs/crypto-js/crypto-js.js",
 				"js/utils/urlBrief.js",
 				"js/utils/vue-router.min.js",
 				"js/cloud/mui.previewimage.js",
 				"img/utils/videothumb.png",
 				"img/utils/img-loading.gif",
 				"js/libs/CryptoJS/components/rc4-min.js",
-				"js/libs/RSA/BigInt.js",
 				"js/libs/CryptoJS/components/mode-cfb-min.js",
 				"js/libs/CryptoJS/components/pad-iso10126.js",
-				"js/libs/RSA/RSA.js",
 				"js/libs/CryptoJS/rollups/rc4.js",
 				"js/libs/CryptoJS/components/sha384.js",
 				"img/homeSchool/redColor.png",
@@ -367,7 +383,6 @@
 				"js/libs/CryptoJS/components/format-hex.js",
 				"js/utils/recordaudioutil.js",
 				"js/libs/CryptoJS/rollups/hmac-sha3.js",
-				"js/utils/vconsole.min.js",
 				"js/mui.pullToRefresh.material.js",
 				"img/utils/default_personalimage.png",
 				"js/libs/crypto-js/tripledes.js",
@@ -377,7 +392,6 @@
 				"js/libs/CryptoJS/components/sha3.js",
 				"js/libs/RSA/RSAEncrypt.js",
 				"js/qiniu/qiniu.js",
-				"js/utils/sortSign.js",
 				"html/homeSchool/addNotice1.html",
 				"js/libs/crypto-js/hmac-sha512.js",
 				"js/libs/CryptoJS/components/pad-iso97971.js",
@@ -402,7 +416,6 @@
 				"js/libs/CryptoJS/rollups/hmac-sha256.js",
 				"img/homeSchool/schoolPage3.png",
 				"js/libs/CryptoJS/components/aes-min.js",
-				"js/libs/jquery.js",
 				"js/qiniu/Moxie.xap",
 				"js/utils/video.js",
 				"js/libs/CryptoJS/rollups/tripledes.js",
@@ -420,16 +433,13 @@
 				"fonts/iconfont.ttf",
 				"js/libs/crypto-js/format-hex.js",
 				"js/mui.js",
-				"js/utils/postData.js",
 				"js/libs/CryptoJS/components/rabbit-min.js",
 				"js/utils/h5fresh.js",
 				"js/libs/CryptoJS/components/rabbit.js",
 				"js/utils/all-preview.js",
-				"js/publicProtocolNew.js",
 				"js/libs/CryptoJS/components/sha224.js",
 				"js/cloud/file-list.js",
 				"js/libs/CryptoJS/components/enc-base64-min.js",
-				"js/libs/crypto-js/require.js",
 				"js/libs/crypto-js/hmac-sha1.js",
 				"js/libs/crypto-js/enc-hex.js",
 				"js/libs/crypto-js/sha256.js",
@@ -455,17 +465,14 @@
 				"fonts/mui1.ttf",
 				"js/libs/CryptoJS/components/sha384-min.js",
 				"js/libs/crypto-js/hmac-ripemd160.js",
-				"js/mui.min.js",
 				"img/utils/delete.png",
 				"js/utils/camera.js",
-				"js/utils/signHmacSHA1.js",
 				"js/libs/CryptoJS/components/enc-utf16.js",
 				"js/utils/grideControl.js",
 				"js/mui.pullToRefresh.js",
 				"html/utils/record_audio.html",
 				"js/libs/CryptoJS/rollups/sha3.js",
 				"js/libs/CryptoJS/components/pad-nopadding.js",
-				"js/storageKeyName.js",
 				"js/libs/jquery.lazyload.min.js",
 				"js/libs/CryptoJS/components/pad-iso97971-min.js",
 				"js/libs/CryptoJS/components/pad-ansix923-min.js",
@@ -491,7 +498,6 @@
 				"css/utils/sciedu/sciedu.css",
 				"js/libs/CryptoJS/components/mode-ctr-gladman.js",
 				"js/utils/recordvideoutil.js",
-				"js/utils/storageutil.js",
 				"js/libs/crypto-js/core.js",
 				"js/utils/switch-mine.js",
 				"js/libs/CryptoJS/components/lib-typedarrays-min.js",
@@ -509,7 +515,6 @@
 				"js/utils/native.js",
 				"css/utils/publish-answer.css",
 				"js/libs/crypto-js/sha384.js",
-				"js/utils/RSAEncrypt.js",
 				"js/libs/CryptoJS/components/evpkdf.js",
 				"js/libs/CryptoJS/components/mode-ctr.js",
 				"js/libs/crypto-js/README.md",
@@ -524,7 +529,6 @@
 				"js/libs/CryptoJS/components/sha256-min.js",
 				"js/utils/Statusbar.js",
 				"js/libs/crypto-js/pad-pkcs7.js",
-				"js/utils/store.js",
 				"js/libs/CryptoJS/components/pbkdf2.js",
 				"js/mui.lazyload.img.js",
 				"js/utils/self-adaptive-input.js",
@@ -538,7 +542,6 @@
 				"img/homeSchool/schoolPage0.png",
 				"js/cloud/order-member.js",
 				"js/libs/crypto-js/cipher-core.js",
-				"js/utils/utils.js",
 				"js/libs/CryptoJS/rollups/ripemd160.js",
 				"js/utils/files.js",
 				"js/libs/CryptoJS/components/tripledes-min.js",
